objects/vlocity_cmt__AccountProductRollup__c.object
<CustomObject>
    <description>Stores Product and Category Quantity rollups for Account.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Stores the Account Id for which the rollup quantity is stored.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Product Rollups</relationshipLabel>
        <relationshipName>AccountProductRollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Catalog Id for which the rollup quantity is stored.</description>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Account Product Rollups</relationshipLabel>
        <relationshipName>AccountProductRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Product Id for which the rollup quantity is stored.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Product Rollups</relationshipLabel>
        <relationshipName>AccountProductRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalAssetQuantity__c</fullName>
        <description>Stores the total assets rollup quantity</description>
        <label>Total Asset Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Product Rollup</label>
    <nameField>
        <label>Account Product Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Product Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>